--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -57,7 +57,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #7b809a;
-  --bs-body-bg: #fff;
+  /* --bs-body-bg: #fff; */
 }
 
 *,
@@ -80,7 +80,7 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  /* background-color: var(--bs-body-bg); */
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -10302,9 +10302,9 @@ fieldset:disabled .btn {
   background-color: #fff !important;
 }
 
-.bg-body {
+/* .bg-body {
   background-color: #fff !important;
-}
+} */
 
 .bg-transparent {
   background-color: transparent !important;
@@ -20136,16 +20136,15 @@ fieldset:disabled .btn {
 
 .btn-primary,
 .btn.bg-gradient-primary {
-  box-shadow: 0 3px 3px 0 rgba(233, 30, 99, 0.15), 0 3px 1px -2px rgba(233, 30, 99, 0.2), 0 1px 5px 0 rgba(233, 30, 99, 0.15);
+  box-shadow: 0 3px 3px 0 rgb(113 50 199 / 15%), 0 3px 1px -2px rgb(115 52 198 / 20%), 0 1px 5px 0 rgb(115 52 199 / 15%);
 }
 
 .btn-primary:hover,
 .btn.bg-gradient-primary:hover {
-  background-color: #e91e63;
-  border-color: #e91e63;
-  box-shadow: 0 14px 26px -12px rgba(233, 30, 99, 0.4), 0 4px 23px 0 rgba(233, 30, 99, 0.15), 0 8px 10px -5px rgba(233, 30, 99, 0.2);
+  background-color: #7539c6;
+  border-color: #691ad0;
+  box-shadow: 0 3px 3px 0 rgb(113 50 199 / 15%), 0 3px 1px -2px rgb(115 52 198 / 20%), 0 1px 5px 0 rgb(115 52 199 / 15%);
 }
-
 .btn-primary .btn.bg-outline-primary,
 .btn.bg-gradient-primary .btn.bg-outline-primary {
   border: 1px solid #e91e63;
@@ -21812,7 +21811,7 @@ body.dark-version {
   top: -1rem;
 }
 
-.input-group.input-group-outline .form-control {
+/* .input-group.input-group-outline .form-control {
   background: none;
   border: 1px solid #d2d6da;
   border-radius: 0.375rem;
@@ -21820,7 +21819,7 @@ body.dark-version {
   border-bottom-left-radius: 0.375rem !important;
   padding: 0.625rem 0.75rem !important;
   line-height: 1.3 !important;
-}
+} */
 
 .input-group.input-group-outline .form-control.form-control-lg {
   padding: 0.75rem 0.75rem !important;
@@ -21872,19 +21871,19 @@ body.dark-version {
   border-color: transparent;
 }
 
-.input-group.input-group-outline.is-focused .form-label+.form-control,
+/* .input-group.input-group-outline.is-focused .form-label+.form-control,
 .input-group.input-group-outline.is-filled .form-label+.form-control {
   border-color: #e91e63 !important;
   border-top-color: transparent !important;
   box-shadow: inset 1px 0 #e91e63, inset -1px 0 #e91e63, inset 0 -1px #e91e63;
-}
+} */
 
 .input-group.input-group-outline.is-focused .form-label,
 .input-group.input-group-outline.is-filled .form-label {
   width: 100%;
   height: 100%;
   font-size: 0.6875rem !important;
-  color: #e91e63;
+  color: #EF5350 ;
   display: flex;
   line-height: 1.25 !important;
 }
@@ -21896,13 +21895,13 @@ body.dark-version {
   opacity: 1;
 }
 
-.input-group.input-group-outline.is-focused .form-label:before,
+/* .input-group.input-group-outline.is-focused .form-label:before,
 .input-group.input-group-outline.is-focused .form-label:after,
 .input-group.input-group-outline.is-filled .form-label:before,
 .input-group.input-group-outline.is-filled .form-label:after {
   border-top-color: #e91e63;
   box-shadow: inset 0 1px #e91e63;
-}
+} */
 
 .input-group.input-group-outline.is-valid .form-control {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 8'%3e%3cpath fill='%2366d432' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
@@ -22227,6 +22226,9 @@ label,
 
 .bg-gradient-light {
   background-image: linear-gradient(195deg, #EBEFF4 0%, #CED4DA 100%);
+}
+.bg-gradient-white {
+  background-image: linear-gradient(195deg,  #ffffff 0%, #fbfbfc 100%);
 }
 
 .bg-gradient-dark {
@@ -22603,9 +22605,9 @@ hr.vertical.gray-light {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
 }
 
-hr.horizontal {
+/* hr.horizontal {
   background-color: transparent;
-}
+} */
 
 hr.horizontal.light {
   background-color: #ffffff94;
@@ -23857,7 +23859,8 @@ body:not(.dark-version) .sidenav.bg-transparent .collapse .nav-item .nav-link.ac
 }
 
 .sidenav-header {
-  height: 4.875rem;
+  height: 8.875rem;
+ 
 }
 
 .sidenav-footer .card.card-background:after {
