--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,95 @@
-.body-bg{
-background: linear-gradient(0.35turn, #d4b9fe, #e9f3ff, #7f5fc0);
-   position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 0 solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.75rem;}
-    .mr--2{
-
-        margin-right: -32px;
-    }
-    .bg-purple{background:#7940c5;}
-    hr.red{ background:#ec4c49;  opacity: 1;
-        height: 2px;}
-    hr.purple{     background: #7940c5;
-        opacity: 1;
-        height: 2px;}
-        .text-head{
-            font-size:1.2rem;
-            color:#000; font-weight: 600;
-          
-        }
-    hr.success{background:#5bb25f;  opacity: 1;
-        height: 2px;}
-       p{color:rgb(12, 12, 12); letter-spacing: 1px; font-family: sans-serif;}
-       .card-header{width:85%}
-       .icon-bottom{
-        border-radius: 100%;
-            bottom: -25px;
-            right: 20px;
-        }
-        .no-radius{border-radius:0px!important;}
+.mr--2 {
+    margin-right: -45px;
+  }
+  .bg-purple {
+    background: #7940c5;
+  }
+  hr.red {
+    background: #ec4c49;
+    opacity: 1;
+    height: 2px;
+  }
+  hr.purple {
+    background: #7940c5;
+    opacity: 1;
+    height: 2px;
+  }
+  hr.info {
+    background: #1A73E8 ;
+    opacity: 1;
+    height: 2px;
+  }
+  .bg-gradient-purple{background-color: #7940c5;}
+  .text-head {
+    font-size: 1.2rem;
+    color: #000;
+    font-weight: 600;
+  }
+  hr.success {
+    background: #5bb25f;
+    opacity: 1;
+    height: 2px;
+  }
+  p {
+    color: rgb(12, 12, 12);
+    letter-spacing: 1px;
+    font-family: sans-serif;
+  }
+  .card-header {
+    width: 85%;
+  }
+  .icon-bottom {
+    border-radius: 100%;
+    bottom: -25px;
+    right: 20px;
+  }
+  .no-radius {
+    border-radius: 0px !important;
+  }
+  .navbar-vertical .navbar-nav .nav-link {
+    color: #000 !important;
+  }
+  .navbar-vertical .navbar-nav a.nav-link.active {
+    background-image: linear-gradient(195deg, #7940c5 0%, #6c27c8 100%);
+  }
+  .panel-sub {
+    background: #f5ecff;
+    border-radius: 4rem;
+    overflow: hidden;
+  }
+  .border-radius-sidebar {
+    border-radius: 0.75rem 0rem 0rem 0.75rem;
+  }
+  .d-fixed {
+    position: fixed;
+    width: 90%;
+    top: 50%;
+    left: 50%;
+    height: 90%;
+    transform: translate(-50%, -50%);
+  }
+  
+  body {
+    height: 100vh;
+   background: #d4b9fe; 
+background: -moz-linear-gradient(-45deg, #d4b9fe 26%, #ebf3fe 50%, #8060c1 100%); 
+background: -webkit-linear-gradient(-45deg, #d4b9fe 26%,#ebf3fe 50%,#8060c1 100%); 
+background: linear-gradient(135deg, #d4b9fe 26%,#ebf3fe 50%,#8060c1 100%); 
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4b9fe', endColorstr='#8060c1',GradientType=1 );
+  }
+  .input-group.input-group-outline.is-focused .form-label+.form-control, .input-group.input-group-outline.is-filled .form-label+.form-control {
+    border-color: #EF5350 !important;    border-top-left-radius: 0px!important;
+    border-bottom-left-radius: 0px!important;
+    border-top-color: transparent !important;  border-radius: 0;
+    box-shadow: none;border-bottom: 2px solid #EF5350 ;
+}
+.input-group.input-group-outline .form-control {
+    background: none;
+    border-bottom: 2px solid #d2d6da;
+    border-radius: 0;
+    border-top-left-radius: 0px!important;
+    border-bottom-left-radius: 0px!important;;
+    padding: 0.625rem 0.75rem !important;
+    line-height: 1.3 !important;
+}.sidenav .navbar-brand{    padding: 1.5rem 2rem;
+    height: 9.85rem;}.sidenav .navbar-brand i{ font-size:5rem;}
