--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,13 +77,13 @@ background: -webkit-linear-gradient(-45deg, #d4b9fe 26%,#ebf3fe 50%,#8060c1 100%
 background: linear-gradient(135deg, #d4b9fe 26%,#ebf3fe 50%,#8060c1 100%); 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4b9fe', endColorstr='#8060c1',GradientType=1 );
   }
-  .input-group.input-group-outline.is-focused .form-label+.form-control, .input-group.input-group-outline.is-filled .form-label+.form-control {
+  .input-group.input-group-outline.is-focused, .input-group.input-group-outline.is-filled  {
     border-color: #EF5350 !important;    border-top-left-radius: 0px!important;
     border-bottom-left-radius: 0px!important;
     border-top-color: transparent !important;  border-radius: 0;
     box-shadow: none;border-bottom: 2px solid #EF5350 ;
 }
-.input-group.input-group-outline .form-control {
+.input-group.input-group-outline  {
     background: none;
     border-bottom: 2px solid #d2d6da;
     border-radius: 0;
