--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -22221,7 +22221,7 @@ label,
 }
 
 .bg-gradient-danger {
-  background-image: linear-gradient(195deg, #EF5350 0%, #E53935 100%);
+  background-image: linear-gradient(195deg, #ef1a36 0%, #fe324d 100%);
 }
 
 .bg-gradient-light {
